--- a/public/index.html
+++ b/public/index.html
@@ -517,8 +517,8 @@
                 <button type="submit" class="btn btn-primary btn-lg">
                     <i class="fas fa-paper-plane me-2"></i>Submit Registration
                 </button>
-                <a href="/admin" class="btn btn-outline-secondary btn-lg ms-md-2">
-                    <i class="fas fa-tachometer-alt me-2"></i>Admin Dashboard
+                <a href="#" class="btn btn-outline-secondary btn-lg ms-md-2">
+                    <i class="fas fa-tachometer-alt me-2"></i>Thank You
                 </a>
             </div>
         </form>
